--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ img {
   height: 100%;
   border-radius: 10px;
   object-fit: cover;
+  transition: transform .3s;
 }
 
 #item-1:checked ~ .cards #song-3, #item-2:checked ~ .cards #song-1, #item-3:checked ~ .cards #song-2 {
